@@ -36,7 +36,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of data set service using Cassandra database.
@@ -374,7 +373,7 @@ public class CassandraDataSetService implements DataSetService {
   private List<Representation> getRepresentations(List<DatasetAssignment> assignments) {
     return assignments.stream()
                       .map(stub -> recordDAO.getRepresentation(stub.getCloudId(), stub.getSchema(), stub.getVersion()))
-                      .collect(Collectors.toList());
+                      .toList();
   }
 
   /**
